--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Number Trivia App</string>
     <string name="title">Random Number Facts</string>
+    <string name="search">Search</string>
 </resources>
